# ad-campaign-analytics

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  script.sh
bigquery/: 01_create_dataset.sql  load_kaggle_data.py
dags/: .gitkeep  ad_campaign_pipeline.py
dbt/: dbt_project.yml  profiles.yml
dbt/macros/: fix_shifted_rows.sql  performance_metrics.sql
dbt/models/marts/: mart_daily_performance.sql  mart_daily_performance.yml
dbt/models/staging/: __sources.yml  stg_fb_ads_data.sql  stg_fb_ads_data.yml
keys/: .gitkeep
